yandex: check wrapped links